# global_climate

./: .gitignore  README.md  global_climate.ipynb  pyproject.toml  requirements.txt
data/: is_land.nc
