[project]
name = "global-climate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.31",
    "h5netcdf>=1.6.4",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "tqdm>=4.67.1",
    "xarray>=2025.9.0",
]
